force-app/main/default/objects/TTS_Recipient__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Stores the monetary amount allocated to this recipient.</description>
    <inlineHelpText>Enter the amount this recipient will receive.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>