force-app/main/default/objects/TTS_Recipient__c/fields/IP_Recipient_Comments__c.field-meta.xml
<CustomField>
    <fullName>IP_Recipient_Comments__c</fullName>
    <description>Captures notes about this recipient's part of the transaction.</description>
    <inlineHelpText>Enter relevant notes about this recipient's distribution.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>