force-app/main/default/objects/TTS_Recipient__c/fields/IP_Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>IP_Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the distribution to the recipient individual Contact.</description>
    <inlineHelpText>Select the individual Contact receiving this distribution.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>