force-app/main/default/objects/TTS_Recipient__c/fields/IP_Recipient_Payment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>IP_Recipient_Payment_Date_Time__c</fullName>
    <description>Records the date and time of payment to this recipient.</description>
    <inlineHelpText>Enter the date and time when this recipient was or will be paid.</inlineHelpText>
    <label>Payment Date/Time</label>
    <type>DateTime</type>
</CustomField>