force-app/main/default/objects/TTS_Recipient__c/fields/IP_Recipient_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_Recipient_Payment_Reference__c</fullName>
    <description>Stores the payment reference for this recipient's distribution.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the payment reference used to identify this recipient's distribution.</inlineHelpText>
    <label>Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>