force-app/main/default/objects/TTS_Recipient__c/fields/IP_Transaction__c.field-meta.xml
<CustomField>
    <fullName>IP_Transaction__c</fullName>
    <description>Associates the recipient with its parent Transaction.</description>
    <inlineHelpText>Select the Transaction from which this recipient receives a distribution.</inlineHelpText>
    <label>Transaction</label>
    <referenceTo>TTS_Transaction__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>